# nosql-db

./: .gitignore  CMakeLists.txt  readme.md
include/db/entity/: entity.h
include/db/file/: file.h  file_interaction.h  heap.h
include/db/query/: query.h
include/db/section/: section_header.h  section_interaction.h
include/db/tests/: tests.h
include/db/user/: user.h
include/db/util/: util.h
include/entity/: entity.h
include/file/: file.h  file_interaction.h  heap.h
include/query/: query.h
include/schema/: query.xsd
include/section/: section_header.h  section_interaction.h
include/serializer/: from_xml.h  to_xml.h
include/tests/: tests.h
include/transfer/: socket.h
include/types/: types.h
include/user/: user.h
include/util/: util.h
llp-client/: CMakeLists.txt
llp-client/include/client/: ast.h  input.h  parser.tab.h
llp-client/include/schema/: query.xsd  response.xsd
llp-client/include/serializer/: xml.h
llp-client/include/transfer/: socket.h
llp-client/src/: main.c
llp-client/src/client/: ast.c  input.c  lex.yy.c  parser.tab.c  parser.y
llp-client/src/serializer/: xml.c
llp-client/src/transfer/: socket.c
src/: main.c
src/client/parser/: lexer.l  parser.y
src/db/entity/: entity.c
src/entity/: entity.c
src/file/: file.c  file_interaction.c  heap.c
src/parser/: lexer.l  parser.y
src/query/: query.c
src/section/: section_header.c  section_interaction.c
src/serializer/: from_xml.c  to_xml.c
src/tests/: tests.c
src/transfer/: socket.c
src/types/: types.c
src/user/: user.c
src/util/: util.c
(+12 files in other folders)
